AC_PREREQ([2.69])
AC_INIT([lkvs], [1.0], [yi.sun@intel.com])

AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR([.])

# Checks for programs.
AC_PROG_CC

AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 th/Makefile
                 xsave/Makefile])
AC_OUTPUT


